--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cv-zzj",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
-  "productName": "郑智杰的简历",
+  "productName": "郑智杰",
   "author": "chieh <email@zzj.cool>",
   "private": true,
   "scripts": {
