--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,10 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: '15'
+      - name: Build
+
         run: |
           npm install
           npm run build
